@@ -525,9 +525,10 @@ Changes for 1.8.11
 
 Changes for 1.8.11rc1
 
+A.F....... [ZBX-4718] Fixed incorrect graph y axis itemids in Full host cloning (Toms)
 ..F....... [ZBX-3522] fixed errors when insert too long values to user_history and profiles tables (Vedmak)
 A......... [ZBX-4124] fixed template.get to correctly select applications, graphs and triggers; thanks to gescheit (Alexei)
-A......... [ZBX-4562] fixed meditype.update returning wrong formatted result (Toms)
+A......... [ZBX-4562] fixed mediatype.update returning wrong formatted result (Toms)
 ...G...PS. [ZBX-4721] fixed handling of \u0000 by JSON parser; thanks to Rick Alm (Sasha)
 ..F....... [ZBX-4604] added the "change" link for clocks in screen configuration (Pavels)
 ..F....... [ZBX-4604] fixed the "change" link not being accessible for graph type screen items in embeded screens (Pavels)
